# repo-peek

./: LICENSE  Readme.md  index.md  pyproject.toml
src/github_peek/: __init__.py  cli.py  config.py  fetch.py  logging.py  utils.py
src/repo_peek/: __init__.py  cli.py  config.py  fetch.py  logging.py  main.py  utils.py
tests/: test_github_peek.py  test_repo_peek.py
