[tool.poetry]
name = "github-peek"
version = "0.2.0"
description = "A command line tool to peek a remote repo locally."
authors = ["unrahul <rahulunair@gmail.com>"]
license = "MIT"
readme = "Readme.md"
documentation = "https://github.com/rahulunair/github-peek"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.7.3"}
typer = "^0.3.2"
sh = "^1.14.1"
aiofiles = "^0.6.0"
loguru = "^0.5.3"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.poetry.scripts]
ghub = "github_peek.cli:app"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
